--- a/src/components/alarmModal/alarmModal.css
+++ b/src/components/alarmModal/alarmModal.css
@@ -25,13 +25,15 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  /* Fond semi-transparent pour l'effet de superposition */
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .popup-content {
-  background-color: grey;
+  background: linear-gradient(#e66465, #9198e5);
+
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
