--- a/src/components/alarmModal/alarmModal.css
+++ b/src/components/alarmModal/alarmModal.css
@@ -18,7 +18,7 @@
 
 /* MODAL */
 
-.popup-overlay {
+.modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -31,7 +31,7 @@
   align-items: center;
 }
 
-.popup-content {
+.modal-content {
   background: linear-gradient(#e66465, #9198e5);
 
   padding: 20px;
@@ -39,14 +39,11 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
-.popup-content h2 {
+.modal-content h2 {
   margin-top: 0;
 }
 
-.popup-content p {
-}
-
-.popup-content button {
+.modal-content button {
   background-color: #007bff;
   color: white;
   border: none;
@@ -55,7 +52,7 @@
   cursor: pointer;
 }
 
-.popup-content button:hover {
+.modal-content button:hover {
   background-color: #0056b3;
 }
 
